# Tether

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py  test_capture_anthropic.py  test_capture_async.py  test_capture_openai.py  test_models.py  test_storage.py
tether/: __init__.py  exceptions.py
tether/capture/: __init__.py  anthropic.py  openai.py
tether/core/: __init__.py  logging.py  models.py  storage.py
