[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tether-py"
version = "0.1.0"
description = "Trace capture and replay layer for production LLM evaluation — persists every call to SQLite for replay-based cost-vs-quality analysis."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Venkata Manideep Patibandla", email = "venkatamanideep20@gmail.com" }]
requires-python = ">=3.11"
keywords = ["llm", "agents", "durability", "openai", "anthropic", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "pydantic>=2.0.0",
    "aiosqlite>=0.19.0",
    "structlog>=24.0.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-vcr>=1.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-aiofiles",
]

[project.urls]
Homepage = "https://github.com/patibandlavenkatamanideep/Tether"
Repository = "https://github.com/patibandlavenkatamanideep/Tether"
Issues = "https://github.com/patibandlavenkatamanideep/Tether/issues"

[tool.hatch.build.targets.wheel]
packages = ["tether"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "ANN", # flake8-annotations (public APIs)
    "PTH", # flake8-use-pathlib
]
ignore = [
    "ANN401", # Dynamically typed expressions (Any) — allowed where documented
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["aiosqlite.*", "vcr.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["tether"]
omit = ["tests/*"]
